Fix overflowing innerHTML objects

--- a/client/src/app/styles/typography.scss
+++ b/client/src/app/styles/typography.scss
@@ -8,6 +8,7 @@
 
 // todo move somewhere else, not related to typography really anymore
 .quill-content{
+
   p:first-of-type{
     margin-top: 0;
   }
@@ -15,8 +16,10 @@
     margin-bottom: 0;
   }
   // Restricts the maximum size of quill editor HTML content's images so the containers don't overflow
-  img{
+  img, iframe{
     max-width: 100%;
+    object-fit: contain;
+    height: auto
   }
 }
 
